Working Maven and Springboot implementation

--- a/Sprint 2/my-api/pom.xml
+++ b/Sprint 2/my-api/pom.xml
@@ -61,6 +61,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.11.0</version>
             <configuration>
+            	<mainClass>App</mainClass>
                 <source>22</source>
                 <target>22</target>
             </configuration>
