--- a/Sprint 2/my-api/pom.xml
+++ b/Sprint 2/my-api/pom.xml
@@ -2,71 +2,55 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId> <!-- Change this to your project’s group ID -->
-    <artifactId>my-api</artifactId> <!-- Change this to your project’s artifact ID -->
+    <groupId>com.example</groupId>
+    <artifactId>my-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>my-api</name>
-    <url>http://maven.apache.org</url>
 
     <!-- Spring Boot Parent -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version> <!-- Check for the latest Spring Boot version -->
-        <relativePath/> <!-- Allows inheriting dependency versions -->
+        <version>3.1.0</version>
+        <relativePath/>
     </parent>
 
+    <properties>
+        <java.version>17</java.version> <!-- Set this to match your JDK version -->
+    </properties>
+
     <dependencies>
-        <!-- Spring Boot Web Starter (for REST API) -->
+        <!-- Spring Boot Web Starter (for building REST APIs) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- JavaMail API -->
+        <!-- Optional: Spring Boot Testing Starter -->
         <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.6.2</version> <!-- Latest stable version -->
-        </dependency>
-
-        <!-- Activation (for MIME-type data handling in JavaMail) -->
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1.1</version> <!-- Latest stable version -->
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
-    <!-- Maven Plugins for Spring Boot -->
-<build>
-    <plugins>
-        <!-- Spring Boot Maven Plugin -->
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-        </plugin>
-
-        <!-- Maven Compiler Plugin -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.11.0</version>
-            <configuration>
-            	<mainClass>App</mainClass>
-                <source>22</source>
-                <target>22</target>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
-
+    <build>
+        <plugins>
+            <!-- Spring Boot Maven Plugin -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <!-- Maven Compiler Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
